--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,13 @@ sha2 = "0.9"
 serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0"
 error-chain = { version = "0.12.4", default-features = false }
-reqwest = { version = "0.10.9", features = ["blocking", "json"] }
+reqwest = { version = "0.10.9", features = ["json"] }
 tungstenite = "0.11.1"
 url = "2.2.0"
 
 [features]
 vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/tls-vendored"]
+blocking = ["reqwest/blocking"]
 
 [dev-dependencies]
 csv ="1.1.5"
