--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,18 +23,26 @@ path = "src/lib.rs"
 hex = "0.4"
 hmac = "0.10.1"
 sha2 = "0.9"
-serde = { version = "1.0.118", features = ["derive"] }
+serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0"
 error-chain = { version = "0.12.4", default-features = false }
 reqwest = { version = "0.11.2", features = ["json"] }
-tungstenite = "0.11.1"
+tungstenite = "0.13.0"
+tokio-tungstenite = "0.14.0"
+tokio = "1.4.0"
 url = "2.2.0"
 
 [features]
-vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/tls-vendored"]
+default = ["vendored-tls"]
+vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls", "tokio-tungstenite/native-tls-vendored"]
 blocking = ["reqwest/blocking"]
 
 [dev-dependencies]
 csv ="1.1.5"
 mockito = "0.30.0"
 env_logger = "0.8.3"
+
+[dependencies.futures-util]
+default-features = false
+features = ["async-await", "sink", "std"]
+version = "0.3"
