--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,15 +26,16 @@ sha2 = "0.9"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0"
 error-chain = { version = "0.12.4", default-features = false }
-reqwest = { version = "0.11.2", features = ["json"] }
-tungstenite = "0.13.0"
-tokio-tungstenite = "0.14.0"
+reqwest = { version = "0.11.2", features = ["json"], default-features = false }
+tungstenite = { version = "0.13.0", default-features = false }
+tokio-tungstenite = { version = "0.14.0", features = ["connect"], default-features = false }
 tokio = "1.4.0"
 url = "2.2.0"
 
 [features]
-default = ["vendored-tls"]
+default = ["rustls"]
 vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls", "tokio-tungstenite/native-tls-vendored"]
+rustls = ["reqwest/rustls-tls", "tungstenite/rustls-tls", "tokio-tungstenite/rustls-tls"]
 blocking = ["reqwest/blocking"]
 
 [dev-dependencies]
